// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debug 1`] = `
"<ForwardRef
  onPress={[Function _callee]}
>
  <TextComponent
    text=\\"Press me 0\\"
  />
</ForwardRef>"
`;

exports[`debug.deep 1`] = `
"<View
  accessible={true}
  focusable={true}
  onClick={[Function onClick]}
  onResponderGrant={[Function onResponderGrant]}
  onResponderMove={[Function onResponderMove]}
  onResponderRelease={[Function onResponderRelease]}
  onResponderTerminate={[Function onResponderTerminate]}
  onResponderTerminationRequest={[Function onResponderTerminationRequest]}
  onStartShouldSetResponder={[Function onStartShouldSetResponder]}
  style={
    Object {
      \\"opacity\\": 1,
    }
  }
>
  <Text>
    Press me 0
  </Text>
</View>"
`;

exports[`debug.deep async test 1`] = `
"<View
  accessible={true}
  focusable={true}
  onClick={[Function onClick]}
  onResponderGrant={[Function onResponderGrant]}
  onResponderMove={[Function onResponderMove]}
  onResponderRelease={[Function onResponderRelease]}
  onResponderTerminate={[Function onResponderTerminate]}
  onResponderTerminationRequest={[Function onResponderTerminationRequest]}
  onStartShouldSetResponder={[Function onStartShouldSetResponder]}
  style={
    Object {
      \\"opacity\\": 1,
    }
  }
>
  <Text>
    Press me 1
  </Text>
</View>"
`;
